cmake_minimum_required (VERSION 2.8)

message ("-- Configuring scripts")

install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_local  DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_remote DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/build_vm     DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/coverage     DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/platforms    DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/post-commit  DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/post-receive DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/publish      DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/report       DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/snapshot     DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/summary      DESTINATION bin)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/thresher     DESTINATION bin)
